<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="main_title">Kneipenrallye</string>
    <string name="main_barlist">Barlist</string>
    <string name="main_account">Profile</string>
    <string name="main_livemap">Livemap</string>
    <string name="main_settings">Settings</string>
    <string name="main_registration">Profile</string>
    <string name="main_news">News</string>
    <string name="registration_username_hint">Username</string>
    <string name="registration_btn_register">Start</string>
    <string name="registration_image_description" tools:keep="@string/registration_image_description">User image</string>
    <string name="settings_save">Save</string>
    <string name="settings_load">Load</string>
    <string name="settings_push_notification">Push Notification</string>
    <string name="settings_hint_password">Password</string>
    <string name="settings_hint_username">Username</string>
    <string name="settings_faculty">Number of your Faculty</string>
    <string name="account_username">Username</string>
    <string name="account_faculty">Faculty</string>
    <string name="account_uid">UID</string>
    <string name="account_username_content">Username content</string>
    <string name="account_faculty_content">Faculty content</string>
    <string name="account_uid_content">UID Content</string>
    <string name="account_delete">Delete Account</string>
    <string name="news_title">News Title</string>
    <string name="news_description">News Description</string>
    <string name="settings_fcm_token">FCM Token</string>
    <string name="how_it_works">HOW IT WORKS</string>

    <string-array name="faculties_en">
        <item>Applied Natural Sciences and Cultural Studies</item>
        <item>Architecture</item>
        <item>Civil Engineering</item>
        <item>Business Studies</item>
        <item>Electrical Engineering and Information Technology</item>
        <item>Computer Science and Mathematics</item>
        <item>Mechanical Engineering</item>
        <item>Social and Health Care Sciences</item>
    </string-array>

    <string-array name="faculties_de">
        <item>Angewandte Natur- und Kulturwissenschaften</item>
        <item>Architektur</item>
        <item>Bauingeniuerwesen</item>
        <item>Betriebswirtschaft</item>
        <item>Elektro- und Informationstechnik</item>
        <item>Informatik und Mathematik</item>
        <item>Maschinenbau</item>
        <item>Angewandte Sozial- und Gesundheitswissenschaften</item>
        <item>Barkeeper</item>
    </string-array>

    <string name="barlist_bar_name">Bar name</string>
    <string name="barlist_bar_description">Bar description</string>
    <string name="bardetail_special">Special:</string>
    <string name="bardetail_location">Location:</string>
    <string name="bardetail_special_content">I am secret code for a free cocktail</string>
    <string name="bardetail_location_content">Maximilianstrasse 2</string>
    <string name="login_login">Login</string>
    <string name="main_barkeeper_login">Barkeeper</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" tools:keep="@string/hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_txt_bk_logout">logout</string>
    <string name="main_scan_qr_code">Scan QR Code</string>
    <string name="emulate_qr_code">Emulate QR CODE</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="bar_image_description">Bar Image</string>
    <string name="stamp_image_description">Stamp Image</string>
    <string name="kr_logo">Kneipenrallye Logo</string>
    <string name="qr_image_description">QR Code</string>
    <string name="bk_default_pw">kneipenrallye</string>
    <string name="bk_code_gen_n2">2</string>
    <string name="bk_code_gen_n3">3</string>
    <string name="bk_code_gen_n1">1</string>
    <string name="bk_code_gen_n4">4</string>
    <string name="bk_code_gen_n5">5</string>
    <string name="qr_output_string">QR Output String</string>
    <string name="bk_default_email">bar13@kneipen.rallye</string>
</resources>
