<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/txt_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/account_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_faculty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_faculty"
        app:layout_constraintStart_toStartOf="@+id/txt_username"
        app:layout_constraintTop_toBottomOf="@+id/txt_username" />

    <TextView
        android:id="@+id/txt_uid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_uid"
        app:layout_constraintStart_toStartOf="@+id/txt_faculty"
        app:layout_constraintTop_toBottomOf="@+id/txt_faculty" />

    <TextView
        android:id="@+id/txt_username_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/account_username_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_username"
        app:layout_constraintTop_toTopOf="@+id/txt_username" />

    <TextView
        android:id="@+id/txt_faculty_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_faculty_content"
        app:layout_constraintEnd_toEndOf="@+id/txt_username_content"
        app:layout_constraintStart_toStartOf="@+id/txt_username_content"
        app:layout_constraintTop_toTopOf="@+id/txt_faculty" />

    <TextView
        android:id="@+id/txt_uid_content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/account_uid_content"
        app:layout_constraintEnd_toEndOf="@+id/txt_faculty_content"
        app:layout_constraintStart_toStartOf="@+id/txt_faculty_content"
        app:layout_constraintTop_toTopOf="@+id/txt_uid" />

    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/account_delete"
        app:layout_constraintEnd_toEndOf="@+id/txt_uid_content"
        app:layout_constraintStart_toStartOf="@+id/txt_uid"
        app:layout_constraintTop_toBottomOf="@+id/txt_uid" />

</androidx.constraintlayout.widget.ConstraintLayout>
